# SUP

./: CMakeLists.txt  DataStructures.hpp  DirectoriesReader.hpp  DocumentationGenerator.hpp  LICENSE  README.md  StateMachine.hpp  main.cpp
.sup/: SUP  sup  sup.txt
source/: DataParsers  DataStructures  DataStructures.hpp  DefaultFileReader.hpp  DirectoriesReader.hpp  DirectoriesReader.ut.cpp  DirectoriesReader.ut.hpp  DocumentationGenerator.hpp  EntriesBuilder.hpp  File.hpp  FileBuilder.hpp  FileDataBuilder.hpp  FileIO.hpp  FileParser.hpp  FileParserComments.hpp  FileParserComments.ut.cpp  FileParserComments.ut.hpp  FileParserSyntax.hpp  GeneratorTxt.hpp  IgnoreFileReader.hpp  IgnoreFiles.hpp  ParsedFile.hpp  PathInitializer.hpp  PathInitializer.ut.cpp  Program.hpp  ProgramInitializer.hpp  ProjectBuilder.hpp  ProjectTree.hpp  ProjectTreeBuilder.hpp  ProjectTreeParser.hpp  StateMachine.hpp  Tools  Tools.hpp  iSyntaxBuilder.hpp  iSyntaxCascadeBuilder.hpp  main.cpp
source/FileReaders/: DirectoriesReader.hpp  DirectoriesReader.ut.cpp  DirectoriesReader.ut.hpp  FileReader.hpp  IgnoreFileReader.hpp
source/data parsers/: CommentParser.hpp  CommentParser.ut.cpp  CommentParser.ut.hpp  DirectiveParser.hpp  IncludeParser.hpp  SyntaxParser.hpp
source/data structures/: Block.hpp  Class.hpp  ClassStruct.hpp  File.hpp  FileData.hpp  Instruction.hpp  Namespace.hpp  Operation.hpp  SyntaxTypes  iSyntax.hpp
source/dataStructures/: BaseStructures  DataWithSyntax.hpp  File.hpp  FileData.hpp  FileHeader.hpp  ParsedFile.hpp  PathInitializer.hpp  PathInitializer.ut.cpp  PathInitializer.ut.hpp
source/tools/: Converter.hpp  FileIO.hpp  IgnoreFiles.cpp  IgnoreFiles.hpp
